examples/test/testpolicy6389.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6389
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key16: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value21
          key14: value44
      podSelector:
        matchLabels:
          key30: value39
          key37: value2
          key20: value17
